# Evidec

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  pyproject.toml
aiNote/: 00_concept.md  00_コンセプト.md  01_MVP_requirement.md  01_MVP要件.md  02_MVP_design.md  02_design.md  03_bayesian_requirement.md  04_bayesian_design.md
evidec/: __init__.py  core.py
evidec/bayes/: __init__.py  adapters.py  decision_rule.py
evidec/bayesian/: __init__.py  adapters.py  beta_binomial.py  decision_rule.py
evidec/core/: __init__.py  decision_rule.py  experiment.py  formatters.py  report.py  rule_utils.py
evidec/decision/: rule.py  rule_utils.py
evidec/experiment/: experiment.py  result.py
evidec/frequentist/: __init__.py
evidec/report/: __init__.py  formatters.py  renderer.py  schema.py
evidec/stats/: __init__.py  ttest.py  ztest.py
evidec/utils/: __init__.py  formatting.py
examples/: basic_ab.py  bayes_prior.py  bayesian_prior.py  non_inferiority.py
tests/: __init__.py  test_decision_rule.py  test_experiment.py  test_non_inferiority_rule.py  test_renderer_and_report.py  test_report.py  test_smoke.py  test_stats.py  test_ztest_validation.py
tests/arch/: __init__.py  helpers.py  layers.py  test_design_principles.py  test_layer_dependencies.py  test_no_circular_dependencies.py  test_public_api.py
tests/bayes/: test_adapters.py  test_beta_binomial.py  test_decision_rule.py
tests/bayesian/: test_adapters.py  test_beta_binomial.py  test_decision_rule.py
tests/report/: test_renderer_bayes.py  test_renderer_bayesian.py
