[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "evidec"
version = "0.1.0"
description = "Evidence-based A/B test helper: run tests, decide GO/NO-GO, and render Markdown reports."
readme = "README.md"
authors = [{ name = "Evidec authors" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.6",
    "poethepoet>=0.26",
]

[project.urls]
"Repository" = "https://github.com/kunifu/Evidec"

[tool.hatch.build.targets.wheel]
packages = ["evidec"]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy evidec"
test = "pytest -q"
check.sequence = [
  "lint",
  "typecheck",
  "test"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E", "F", "I", "B", "W", "UP",
]
ignore = [
  "E203",  # whitespace before ':' (keep compatible with black-style formatting)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=evidec --cov-report=term-missing"
